--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>testes</h1>
     <div>
-        <h2>Esse é o segundo projeto</h2>
-        <p>Esse é o segundo projeto</p>
+        <h2>Esse é o primeiro GIT</h2>
+        <p>Esse é o primeiro GIT</p>
     </div>
 </body>
 </html>
